--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
   },
   "homepage": "https://github.com/JBohde/abttru-2.5#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "axios": "^0.20.0",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.10.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
